--- a/public/styles.css
+++ b/public/styles.css
@@ -3,47 +3,51 @@ html {
   width: 100%;
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: wheat;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 body {
   margin: 0;
   padding: 0;
-  height: 1000px;
-  width: 100%;
+  height: 100%;
+  width: 94rem;
+  background-color: tomato;
 }
 
-
+section, aside {
+  margin: 0;
+  padding: 0;
+}
 /* ------- now for the classic view styles (flexbox) ------------ */
-/*                   main area                      */
+/*                      body                        */
 /*                  /         \                     */
 /*           classicHeader     gridStats            */
 /*                             \        \           */
 /*                             grid      rightMenus */
 /* ----------------------------------------------------------------*/
 
-.mainArea {
-  margin: 0;
-  padding: 0;
-  height: 1000px;
-  width: 100%;
-}
-
 .classicHeader {
   margin: 0;
   padding: 0;
-  height: 70px;
+  height: 4.4rem;
   width: 100%;
+  background-color: #333;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  background-color: #333;
 }
 
 .gridStats {
   margin: 0;
   padding: 0;
-  height: 950px;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -51,16 +55,10 @@ body {
   align-items: flex-start;
 }
 
-.grid {
-  flex: 10;
-  background-color: #e3e3e8;
-}
 
-.rightMenus {
-  flex: 2;
-  background-color: #3f6846;
-}
 
+
+/* header stuffs */
 #viewSelect1 {
   flex: 1;
   margin-left: 20px;
@@ -74,8 +72,28 @@ body {
   display: flex;
 }
 
+.exportIcons {
+  flex: 1;
+  display: flex;
+  padding-right: 20px;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.exportIcons > button {
+  display: inline;
+  margin-left: 10px;
+  color: #fff;
+  background-color: #333;
+  border: none;
+}
+
+.exportIcons > button:hover {
+  color: #b2001d;
+}
+
 .calMonthFlex {
-  flex: .3;
+  width: 450px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -112,7 +130,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: stretch;
-
+  
 }
 
 .calNavMonth > li {
@@ -152,23 +170,22 @@ body {
   border-color: #898989;
 }
 
-.exportIcons {
-  flex: 1;
-  display: flex;
-  padding-right: 20px;
-  justify-content: flex-end;
-  align-items: center;
+
+
+/* gridstats stuffs */
+.grid {
+  margin: 0;
+  padding: 0;
+  flex-basis: 75rem;
+  background-color: #e3e3e8;
+  display: inline-block;
 }
 
-.exportIcons > button {
-  display: inline;
-  margin-left: 10px;
-  color: #fff;
-  background-color: #333;
-  border: none;
+.rightMenus {
+  margin: 0;
+  padding: 0;
+  height: 60rem;
+  flex-basis: 19rem;
+  background-color: #3f6846;
+  display: inline-block;
 }
-
-.exportIcons > button:hover {
-  color: #b2001d;
-}
-
