--- a/public/styles.css
+++ b/public/styles.css
@@ -61,12 +61,12 @@ section, aside {
 /* header stuffs */
 #viewSelect1 {
   flex: 1;
-  margin-left: 20px;
+  margin-left: 1.25rem;
 }
 
 .classicNavCal {
   flex: 10;
-  margin-left: 50px;
+  margin-left: 3.125rem;
   color: #fff;
   height: 100%;
   display: flex;
@@ -75,14 +75,14 @@ section, aside {
 .exportIcons {
   flex: 1;
   display: flex;
-  padding-right: 20px;
+  padding-right: 1.25rem;
   justify-content: flex-end;
   align-items: center;
 }
 
 .exportIcons > button {
   display: inline;
-  margin-left: 10px;
+  margin-left: 0.625rem;
   color: #fff;
   background-color: #333;
   border: none;
@@ -93,7 +93,7 @@ section, aside {
 }
 
 .calMonthFlex {
-  width: 450px;
+  width: 28.125rem;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -103,10 +103,10 @@ section, aside {
 
 .calNavYear {
   flex: 1;
-  margin-top: 5px;
+  margin-top: 0.3125rem;
   padding: 0;
   align-self: center;
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 .calNavYear > button {
@@ -114,8 +114,8 @@ section, aside {
   color: #fff;
   background-color: #333;
   border: none;
-  margin-right: 5px;
-  margin-left: 5px;
+  margin-right: 0.3125rem;
+  margin-left: 0.3125rem;
 }
 
 .calNavYear > button:hover {
@@ -124,7 +124,7 @@ section, aside {
 
 .calNavMonth {
   flex: 3;
-  margin-top: 5px;
+  margin-top: 0.3125rem;
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -135,7 +135,7 @@ section, aside {
 
 .calNavMonth > li {
   list-style-type: none;
-  margin-left: 10px;
+  margin-left: 0.625rem;
   flex: 1;
   text-align: center;
 }
@@ -144,7 +144,7 @@ section, aside {
   display: block;
   text-decoration: none;
   font-family: 'Roboto Mono', monospace;
-  font-size: 1.1em;
+  font-size: 1.1rem;
   border-width: medium;
   border-style: solid;
   border-radius: 50%;
