--- a/public/styles.css
+++ b/public/styles.css
@@ -186,6 +186,20 @@ section, aside {
   padding: 0;
   height: 60rem;
   flex-basis: 19rem;
-  background-color: #3f6846;
+  background-color: #898989;
   display: inline-block;
+}
+
+/*   rightMenu stuff    */
+.expandToggle {
+  width: 100%;
+  height: 3rem;
+  border: 0.0625rem solid #000;
+  background-color: #333;
+  color: #fff;
+  text-align: left;
+}
+
+.expandToggle:hover {
+  color: #b2001d;
 }
