--- a/public/styles.css
+++ b/public/styles.css
@@ -203,3 +203,29 @@ section, aside {
 .expandToggle:hover {
   color: #b2001d;
 }
+
+.shiftBtn {
+  width: 6rem;
+  height: 2.2rem;
+  background-color: #f2f2f2;
+  border: none;
+  margin: 0.12rem;
+}
+
+.shiftBtnActive {
+  width: 6rem;
+  height: 2.2rem;
+  background-color: #fff;
+  border: none;
+  margin: 0.12rem;
+  border: 0.125rem solid #b2001d;
+  font-size: 1.1rem;
+}
+
+.shiftBtn:hover {
+  border: 0.125rem solid #b2001d;
+}
+
+.shiftBtnNone {
+  display: none;
+}
