--- a/public/styles.css
+++ b/public/styles.css
@@ -17,7 +17,15 @@ body {
   padding: 0;
   height: 100%;
   width: 94rem;
-  background-color: tomato;
+  background-color: #fff;
+}
+
+.leaveContainer {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 94rem;
+  background-color: #fff;
 }
 
 section, aside {
@@ -175,10 +183,12 @@ section, aside {
 /* gridstats stuffs */
 .grid {
   margin: 0;
-  padding: 0;
   flex-basis: 75rem;
   background-color: #e3e3e8;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .rightMenus {
@@ -189,6 +199,24 @@ section, aside {
   background-color: #898989;
   display: inline-block;
 }
+
+
+/*     grid stuff     */
+.classicTable {
+  border-collapse: collapse;
+  margin-top: 1rem;
+}
+
+td, th {
+  border: 0.125rem solid #ddd;
+  text-align: left;
+  padding: 0.2rem;
+}
+
+tr:nth-child(even){
+  background-color: #ddd;
+}
+
 
 /*   rightMenu stuff    */
 .expandToggle {
@@ -277,4 +305,29 @@ section, aside {
 .statsList {
   margin-left: 0.12rem;
   margin-bottom: 0.5rem;
+}
+
+
+
+
+/*****************   Leave Stuff  *******************/
+.leaveBtnBkg {
+  width: 100%;
+  height: 5rem;
+  background-color: #f2f2f2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.assgnLeaveBtn {
+  background-color: #004fce;
+  border: none;
+  border-radius: 0.2rem;
+  color: #fff;
+  height: 2rem;
+}
+
+.assgnLeaveBtn:hover {
+  background-color: #0061ff;
 }
