--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -1,10 +1,17 @@
+// the header has 3 parts:
+// the dropdown
+// the date selector
+// the export buttons
+  
+  
 header
+  height: 4.4rem
+  width: 100%
+  background-color: #333
   display: flex
-  background-color: #dddddd
   flex-direction: row
   justify-content: flex-start
   align-items: center
-  padding: 0.5rem
   
 #headerDropdown
   flex: 1
@@ -12,13 +19,104 @@ header
   border-color: #dddddd
   border-width: 0
   border-radius: 0.2rem
+  margin-left: 0.5rem
 
+
+
+  
+// Date selector stuff
 .headerDateSelector
   flex: 10
-  margin-left: 1rem
-  background-color: orange
+  margin-left: 3.125rem
+  color: #fff
+  height: 100%
+  display: flex
+  background-color: #333
 
+.headerFlexContainer
+  width: 28.125rem
+  height: 100%
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: stretch
+
+.headerCalNavYear 
+  flex: 1
+  margin-top: 0.3125rem
+  align-self: center
+  font-size: 1.2rem
+
+  button
+    text-decoration: none
+    color: #fff
+    background-color: #333
+    border: none
+    margin-right: 0.3125rem
+    margin-left: 0.3125rem
+
+  button:hover 
+    color: #b2001d
+
+.headerCalNavMonth 
+  flex: 3
+  margin-top: 0.3125rem
+  padding: 0
+  display: flex
+  flex-direction: row
+  justify-content: center
+  align-items: stretch
+
+  li 
+    list-style-type: none
+    margin-left: 0.625rem
+    flex: 1
+    text-align: center
+
+  li a 
+    display: block
+    text-decoration: none
+    font-family: 'Roboto Mono', monospace
+    font-size: 1.1rem
+    border-width: medium
+    border-style: solid
+    border-radius: 50%
+
+  li a:hover 
+    color: #b2001d
+    border-color: #b2001d
+
+.headerCalCircleColor 
+  color: #fff
+  border-color: #fff
+
+.headerCalCircleColorActive 
+  color: #b2001d
+  border-color: #b2001d
+
+.headerCalCircleColorPast 
+  color: #898989
+  border-color: #898989
+  
+  
+  
+  
+// export button stuff
 .headerExportBtns
   flex: 1
-  align-self: flex-end
-  background-color: navy
+  height: 100%
+  display: flex
+  padding-right: 1.25rem
+  justify-content: flex-end
+  align-items: center
+
+.headerExportBtns
+  button 
+    display: inline
+    margin-left: 0.625rem
+    color: #fff
+    background-color: #333
+    border: none
+
+  button:hover 
+    color: #b2001d
