--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,10 +1,11 @@
 header {
+  height: 4.4rem;
+  width: 100%;
+  background-color: #333;
   display: flex;
-  background-color: #dddddd;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding: 0.5rem;
 }
 
 #headerDropdown {
@@ -13,18 +14,168 @@ header {
   border-color: #dddddd;
   border-width: 0;
   border-radius: 0.2rem;
+  margin-left: 0.5rem;
 }
 
 .headerDateSelector {
   flex: 10;
-  margin-left: 1rem;
-  background-color: orange;
+  margin-left: 3.125rem;
+  color: #fff;
+  height: 100%;
+  display: flex;
+  background-color: #333;
+}
+
+.headerFlexContainer {
+  width: 28.125rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.headerCalNavYear {
+  flex: 1;
+  margin-top: 0.3125rem;
+  align-self: center;
+  font-size: 1.2rem;
+}
+.headerCalNavYear button {
+  text-decoration: none;
+  color: #fff;
+  background-color: #333;
+  border: none;
+  margin-right: 0.3125rem;
+  margin-left: 0.3125rem;
+}
+.headerCalNavYear button:hover {
+  color: #b2001d;
+}
+
+.headerCalNavMonth {
+  flex: 3;
+  margin-top: 0.3125rem;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+}
+.headerCalNavMonth li {
+  list-style-type: none;
+  margin-left: 0.625rem;
+  flex: 1;
+  text-align: center;
+}
+.headerCalNavMonth li a {
+  display: block;
+  text-decoration: none;
+  font-family: "Roboto Mono", monospace;
+  font-size: 1.1rem;
+  border-width: medium;
+  border-style: solid;
+  border-radius: 50%;
+}
+.headerCalNavMonth li a:hover {
+  color: #b2001d;
+  border-color: #b2001d;
+}
+
+.headerCalCircleColor {
+  color: #fff;
+  border-color: #fff;
+}
+
+.headerCalCircleColorActive {
+  color: #b2001d;
+  border-color: #b2001d;
+}
+
+.headerCalCircleColorPast {
+  color: #898989;
+  border-color: #898989;
 }
 
 .headerExportBtns {
   flex: 1;
-  align-self: flex-end;
-  background-color: navy;
+  height: 100%;
+  display: flex;
+  padding-right: 1.25rem;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.headerExportBtns button {
+  display: inline;
+  margin-left: 0.625rem;
+  color: #fff;
+  background-color: #333;
+  border: none;
+}
+.headerExportBtns button:hover {
+  color: #b2001d;
+}
+
+.gridSection {
+  flex-basis: 75rem;
+  height: 100%;
+}
+
+.grid {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.gridHeaderRow {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 0.5rem;
+}
+
+.gridRow {
+  flex: 5;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-left: 0.5rem;
+  border-bottom: 0.0625rem solid #ddd;
+}
+
+.gridHeaderCell {
+  flex: 1;
+  text-align: left;
+  border-right: 0.0625rem solid #ddd;
+}
+
+.gridCell {
+  flex: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-right: 0.0625rem solid #ddd;
+  padding: 0.125rem;
+}
+
+.rightMenus {
+  margin: 0;
+  padding: 0;
+  height: 60rem;
+  flex-basis: 19rem;
+  background-color: #898989;
+  display: inline-block;
 }
 
 html {
@@ -34,7 +185,7 @@ html {
   font-family: "Open Sans", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: wheat;
+  background-color: #fff;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -46,12 +197,21 @@ body {
   padding: 0;
   height: 60rem;
   width: 94rem;
-  background-color: lavender;
+  background-color: #fff;
 }
 
 section, aside {
   margin: 0;
   padding: 0;
+}
+
+main {
+  height: 55.6rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 /*# sourceMappingURL=styles/styles.css.map */
