--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,4 +1,6 @@
 @import header
+@import grid
+@import rightMenus
 
 html
   height: 100%
@@ -7,7 +9,7 @@ html
   font-family: 'Open Sans', sans-serif
   margin: 0
   padding: 0
-  background-color: wheat
+  background-color: #fff
   display: flex
   flex-direction: row
   justify-content: space-around
@@ -19,9 +21,17 @@ body
   padding: 0
   height: 60rem
   width: 94rem
-  background-color: lavender
+  background-color: #fff
 
 
 section, aside 
   margin: 0
   padding: 0
+
+main
+  height: 55.6rem
+  width: 100%
+  display: flex
+  flex-direction: row
+  justify-content: flex-start
+  align-items: flex-start
