styled calendar portion of rawMarkup.html

--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -17,7 +17,8 @@
   flex-direction: row
   justify-content: flex-start
   align-items: center
-  margin-left: 0.5rem
+  // margin-left: 0.5rem
+  border-left: 0.0625rem solid #ddd
 
 .gridRow
   flex: 5
@@ -26,13 +27,15 @@
   flex-direction: row
   justify-content: flex-start
   align-items: flex-start
-  margin-left: 0.5rem
+  // margin-left: 0.5rem
   border-bottom: 0.0625rem solid #ddd
+  border-left: 0.0625rem solid #ddd
 
 .gridHeaderCell
   flex: 1
   text-align: left
   border-right: 0.0625rem solid #ddd
+  height: 100%
 
 .gridCell
   flex: 1
@@ -42,4 +45,15 @@
   justify-content: flex-start
   align-items: flex-start
   border-right: 0.0625rem solid #ddd
+
+.gridNum
   padding: 0.125rem
+
+.gridEvent
+  background-color: teal
+  color: #ffffff
+  text-align: left
+  width:90%
+  padding: 0.125rem
+  border-radius: 0.2rem
+  margin-top: 0.2rem
