--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -2,7 +2,8 @@
 .rightMenus 
   margin: 0
   padding: 0
-  height: 60rem
+  height: 100%
   flex-basis: 19rem
-  background-color: #898989
+  background-color: #fff
   display: inline-block
+  border: 0.0125rem solid #ddd
