--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -138,7 +138,7 @@ header {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin-left: 0.5rem;
+  border-left: 0.0625rem solid #ddd;
 }
 
 .gridRow {
@@ -148,14 +148,15 @@ header {
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-left: 0.5rem;
   border-bottom: 0.0625rem solid #ddd;
+  border-left: 0.0625rem solid #ddd;
 }
 
 .gridHeaderCell {
   flex: 1;
   text-align: left;
   border-right: 0.0625rem solid #ddd;
+  height: 100%;
 }
 
 .gridCell {
@@ -166,16 +167,30 @@ header {
   justify-content: flex-start;
   align-items: flex-start;
   border-right: 0.0625rem solid #ddd;
+}
+
+.gridNum {
   padding: 0.125rem;
+}
+
+.gridEvent {
+  background-color: teal;
+  color: #ffffff;
+  text-align: left;
+  width: 90%;
+  padding: 0.125rem;
+  border-radius: 0.2rem;
+  margin-top: 0.2rem;
 }
 
 .rightMenus {
   margin: 0;
   padding: 0;
-  height: 60rem;
+  height: 100%;
   flex-basis: 19rem;
-  background-color: #898989;
+  background-color: #fff;
   display: inline-block;
+  border: 0.0125rem solid #ddd;
 }
 
 html {
