finished markup raw markup for niche area...still dont know what i should call this area of the app

--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -13,14 +13,17 @@ header
   justify-content: flex-start
   align-items: center
   
-#headerDropdown
-  flex: 1
-  border-style: solid
-  border-color: #dddddd
-  border-width: 0
-  border-radius: 0.2rem
-  margin-left: 0.5rem
-
+  .viewSelectBtns
+    margin-left: 0.5rem
+    button 
+      display: inline
+      color: #fff
+      background-color: #333
+      border: none
+      &:hover
+        color: #b2001d
+      &.active
+        color: #b2001d
 
 
   
