--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -1,9 +1,137 @@
 
-.rightMenus 
-  margin: 0
-  padding: 0
-  height: 100%
+aside 
   flex-basis: 19rem
   background-color: #fff
   display: inline-block
-  border: 0.0125rem solid #ddd
+  border-right: 0.0125rem solid #ddd
+  border-left: 0.0125rem solid #ddd
+  height: 10.09rem
+
+  .calendarSelect
+    button
+      width: 100%
+      background-color: #fff
+      font-size: 1.8rem
+      border: none
+      padding-bottom: 0.1rem
+
+    ul
+      list-style-type: none
+      margin: 0.3125rem 0 0 0
+      padding: 0 0 0 1.8rem
+      li
+        display: inline-block
+        width: 5rem
+        margin-bottom: 0.16rem
+        .calendarChoice
+          background-color: #ffffff
+          border: 0.125rem solid #ddd
+          border-radius: 0.12rem
+          width: 100%
+          padding: 0.2rem
+          font-size: 0.8333rem
+          &.active
+            border-color: teal
+            background-color: teal
+            color: #ffffff
+          &:hover
+              border-color: navy
+              background-color: navy
+              color: #ffffff
+
+  .supportingInfo
+    background-color: #ddd
+    height: 45.51rem
+    .switchBtn 
+      width: 100%
+      height: 3rem
+      border: 0.0625rem solid #000
+      background-color: #333
+      color: #fff
+      text-align: left
+      font-size: 1.2em
+      i
+        font-size: 0.8rem
+        right: 0.8rem
+        float: right
+        margin-top: 0.3rem
+      &:hover 
+        color: #b2001d
+
+    .shiftComponent
+      height: 4.9rem
+      transition: height .35s ease-in-out
+      &.closed
+        height: 0
+      ul
+        list-style-type: none
+        margin: 0
+        padding: 0
+        li
+          display: inline
+          .shiftBtn
+            height: 2rem
+            background-color: #f2f2f2
+            border: 0.125rem solid #f2f2f2
+            margin: 0.12rem 0.12rem 0.12rem
+            // color: #000000
+            &.active 
+              width: 5rem
+              background-color: #fff
+              border-color: #b2001d
+              font-size: 1.1rem
+            &:hover
+              border-color: #b2001d
+            &.none 
+              display: none
+
+ 
+
+// /*   conflicts stuffs   
+// .conflicts {
+//   margin: 0;
+//   padding: 0.12rem;
+// }
+
+// .conflicts > ul {
+//   margin: 0 0 0 0.2rem;
+//   padding: 0;
+// }
+
+// .conflicts > ul li {
+//   list-style-type: none;
+// }
+
+// .conflictListNone {
+//   display: none;
+// }
+
+// .conflictsList {
+//   margin-left: 0.12rem;
+//   margin-bottom: 0.5rem;
+// }
+
+// /*  stats stuff     
+// .stats {
+//   margin: 0;
+//   padding: 0.12rem;
+// }
+
+// .stats > ul {
+//   margin: 0 0 0 0.2rem;
+//   padding: 0;
+// }
+
+// .stats > ul li {
+//   list-style-type: none;
+// }
+
+// .statsListNone {
+//   display: none;
+// }
+
+// .statsList {
+//   margin-left: 0.12rem;
+//   margin-bottom: 0.5rem;
+// }
+
