--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,39 @@
+html {
+  height: 100%;
+  width: 100%;
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 60rem;
+  width: 94rem;
+  background-color: #fff;
+}
+
+section, aside {
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  height: 55.6rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 header {
   height: 4.4rem;
   width: 100%;
@@ -7,14 +43,20 @@ header {
   justify-content: flex-start;
   align-items: center;
 }
-
-#headerDropdown {
-  flex: 1;
-  border-style: solid;
-  border-color: #dddddd;
-  border-width: 0;
-  border-radius: 0.2rem;
+header .viewSelectBtns {
   margin-left: 0.5rem;
+}
+header .viewSelectBtns button {
+  display: inline;
+  color: #fff;
+  background-color: #333;
+  border: none;
+}
+header .viewSelectBtns button:hover {
+  color: #b2001d;
+}
+header .viewSelectBtns button.active {
+  color: #b2001d;
 }
 
 .headerDateSelector {
@@ -183,50 +225,103 @@ header {
   margin-top: 0.2rem;
 }
 
-.rightMenus {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+aside {
   flex-basis: 19rem;
   background-color: #fff;
   display: inline-block;
-  border: 0.0125rem solid #ddd;
+  border-right: 0.0125rem solid #ddd;
+  border-left: 0.0125rem solid #ddd;
+  height: 10.09rem;
 }
-
-html {
-  height: 100%;
+aside .calendarSelect button {
   width: 100%;
-  font-size: 16px;
-  font-family: "Open Sans", sans-serif;
-  margin: 0;
-  padding: 0;
   background-color: #fff;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: flex-start;
+  font-size: 1.8rem;
+  border: none;
+  padding-bottom: 0.1rem;
 }
-
-body {
-  margin: 0;
-  padding: 0;
-  height: 60rem;
-  width: 94rem;
-  background-color: #fff;
+aside .calendarSelect ul {
+  list-style-type: none;
+  margin: 0.3125rem 0 0 0;
+  padding: 0 0 0 1.8rem;
 }
-
-section, aside {
-  margin: 0;
-  padding: 0;
+aside .calendarSelect ul li {
+  display: inline-block;
+  width: 5rem;
+  margin-bottom: 0.16rem;
 }
-
-main {
-  height: 55.6rem;
+aside .calendarSelect ul li .calendarChoice {
+  background-color: #ffffff;
+  border: 0.125rem solid #ddd;
+  border-radius: 0.12rem;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
+  padding: 0.2rem;
+  font-size: 0.8333rem;
+}
+aside .calendarSelect ul li .calendarChoice.active {
+  border-color: teal;
+  background-color: teal;
+  color: #ffffff;
+}
+aside .calendarSelect ul li .calendarChoice:hover {
+  border-color: navy;
+  background-color: navy;
+  color: #ffffff;
+}
+aside .supportingInfo {
+  background-color: #ddd;
+  height: 45.51rem;
+}
+aside .supportingInfo .switchBtn {
+  width: 100%;
+  height: 3rem;
+  border: 0.0625rem solid #000;
+  background-color: #333;
+  color: #fff;
+  text-align: left;
+  font-size: 1.2em;
+}
+aside .supportingInfo .switchBtn i {
+  font-size: 0.8rem;
+  right: 0.8rem;
+  float: right;
+  margin-top: 0.3rem;
+}
+aside .supportingInfo .switchBtn:hover {
+  color: #b2001d;
+}
+aside .supportingInfo .shiftComponent {
+  height: 4.9rem;
+  transition: height 0.35s ease-in-out;
+}
+aside .supportingInfo .shiftComponent.closed {
+  height: 0;
+}
+aside .supportingInfo .shiftComponent ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+aside .supportingInfo .shiftComponent ul li {
+  display: inline;
+}
+aside .supportingInfo .shiftComponent ul li .shiftBtn {
+  height: 2rem;
+  background-color: #f2f2f2;
+  border: 0.125rem solid #f2f2f2;
+  margin: 0.12rem 0.12rem 0.12rem;
+}
+aside .supportingInfo .shiftComponent ul li .shiftBtn.active {
+  width: 5rem;
+  background-color: #fff;
+  border-color: #b2001d;
+  font-size: 1.1rem;
+}
+aside .supportingInfo .shiftComponent ul li .shiftBtn:hover {
+  border-color: #b2001d;
+}
+aside .supportingInfo .shiftComponent ul li .shiftBtn.none {
+  display: none;
 }
 
 /*# sourceMappingURL=styles/styles.css.map */
