updated backlog, added rawMarkup for the classic view

--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -41,7 +41,7 @@ aside
 
   .supportingInfo
     background-color: #ddd
-    height: 45.51rem
+    height: 55.6rem
     .switchBtn 
       width: 100%
       height: 3rem
@@ -85,7 +85,9 @@ aside
             &.none 
               display: none
 
- 
+.classicAside
+  height: 55.6rem
+  border: none
 
 // /*   conflicts stuffs   
 // .conflicts {
