--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -6,7 +6,7 @@
   width: 100%
   height: 100%
   display: flex
-  flex-direction: column
+  flex-direction: row
   justify-content: flex-start
   align-items: center
 
@@ -57,3 +57,39 @@
   padding: 0.125rem
   border-radius: 0.2rem
   margin-top: 0.2rem
+
+.classicGridSection
+  flex-basis: 75rem
+  height: 100%
+
+.classicGridDateCol
+  width: 6rem
+  height: 100%
+  display: flex
+  flex-direction: column
+  justify-content: flex-start
+  align-items: center
+
+
+.classicGridPersonCol
+  width: 6rem
+  height: 100%
+  display: flex
+  flex-direction: column
+  justify-content: flex-start
+  align-items: center
+  margin-left: 0.2rem
+
+
+.classicGridCell, .classicGridPersonName, .classicGridDate, .classicGridMonthName
+  flex: 1
+  width: 100%
+  border: 0.0625rem solid #ffffff
+  &:hover
+    border-color: #b2001d
+
+.classicGridCell:nth-child(odd)
+    background-color: #eee
+  
+.classicGridDate:nth-child(odd)
+    background-color: #eee
