--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -168,7 +168,7 @@ header .viewSelectBtns button.active {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
@@ -225,6 +225,47 @@ header .viewSelectBtns button.active {
   margin-top: 0.2rem;
 }
 
+.classicGridSection {
+  flex-basis: 75rem;
+  height: 100%;
+}
+
+.classicGridDateCol {
+  width: 6rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.classicGridPersonCol {
+  width: 6rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 0.2rem;
+}
+
+.classicGridCell, .classicGridPersonName, .classicGridDate, .classicGridMonthName {
+  flex: 1;
+  width: 100%;
+  border: 0.0625rem solid #ffffff;
+}
+.classicGridCell:hover, .classicGridPersonName:hover, .classicGridDate:hover, .classicGridMonthName:hover {
+  border-color: #b2001d;
+}
+
+.classicGridCell:nth-child(odd) {
+  background-color: #eee;
+}
+
+.classicGridDate:nth-child(odd) {
+  background-color: #eee;
+}
+
 aside {
   flex-basis: 19rem;
   background-color: #fff;
@@ -270,7 +311,7 @@ aside .calendarSelect ul li .calendarChoice:hover {
 }
 aside .supportingInfo {
   background-color: #ddd;
-  height: 45.51rem;
+  height: 55.6rem;
 }
 aside .supportingInfo .switchBtn {
   width: 100%;
@@ -322,6 +363,11 @@ aside .supportingInfo .shiftComponent ul li .shiftBtn:hover {
 }
 aside .supportingInfo .shiftComponent ul li .shiftBtn.none {
   display: none;
+}
+
+.classicAside {
+  height: 55.6rem;
+  border: none;
 }
 
 /*# sourceMappingURL=styles/styles.css.map */
