--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -6,7 +6,7 @@
   width: 100%
   height: 100%
   display: flex
-  flex-direction: row
+  flex-direction: column
   justify-content: flex-start
   align-items: center
 
@@ -93,3 +93,11 @@
   
 .classicGridDate:nth-child(odd)
     background-color: #eee
+
+.classicGrid
+  width: 100%
+  height: 100%
+  display: flex
+  flex-direction: row
+  justify-content: flex-start
+  align-items: center
