--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -41,7 +41,7 @@ aside
 
   .supportingInfo
     background-color: #ddd
-    height: 55.6rem
+    height: 45.51rem
     .switchBtn 
       width: 100%
       height: 3rem
@@ -88,6 +88,52 @@ aside
 .classicAside
   height: 55.6rem
   border: none
+
+.classicSupportingInfo
+  background-color: #ddd
+  height: 55.6rem
+  .switchBtn 
+    width: 100%
+    height: 3rem
+    border: 0.0625rem solid #000
+    background-color: #333
+    color: #fff
+    text-align: left
+    font-size: 1.2em
+    i
+      font-size: 0.8rem
+      right: 0.8rem
+      float: right
+      margin-top: 0.3rem
+    &:hover 
+      color: #b2001d
+
+  .shiftComponent
+    height: 4.9rem
+    transition: height .35s ease-in-out
+    &.closed
+      height: 0
+    ul
+      list-style-type: none
+      margin: 0
+      padding: 0
+      li
+        display: inline
+        .shiftBtn
+          height: 2rem
+          background-color: #f2f2f2
+          border: 0.125rem solid #f2f2f2
+          margin: 0.12rem 0.12rem 0.12rem
+          // color: #000000
+          &.active 
+            width: 5rem
+            background-color: #fff
+            border-color: #b2001d
+            font-size: 1.1rem
+          &:hover
+            border-color: #b2001d
+          &.none 
+            display: none
 
 // /*   conflicts stuffs   
 // .conflicts {
