--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -168,7 +168,7 @@ header .viewSelectBtns button.active {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
 }
@@ -266,6 +266,15 @@ header .viewSelectBtns button.active {
   background-color: #eee;
 }
 
+.classicGrid {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 aside {
   flex-basis: 19rem;
   background-color: #fff;
@@ -311,7 +320,7 @@ aside .calendarSelect ul li .calendarChoice:hover {
 }
 aside .supportingInfo {
   background-color: #ddd;
-  height: 55.6rem;
+  height: 45.51rem;
 }
 aside .supportingInfo .switchBtn {
   width: 100%;
@@ -368,6 +377,62 @@ aside .supportingInfo .shiftComponent ul li .shiftBtn.none {
 .classicAside {
   height: 55.6rem;
   border: none;
+}
+
+.classicSupportingInfo {
+  background-color: #ddd;
+  height: 55.6rem;
+}
+.classicSupportingInfo .switchBtn {
+  width: 100%;
+  height: 3rem;
+  border: 0.0625rem solid #000;
+  background-color: #333;
+  color: #fff;
+  text-align: left;
+  font-size: 1.2em;
+}
+.classicSupportingInfo .switchBtn i {
+  font-size: 0.8rem;
+  right: 0.8rem;
+  float: right;
+  margin-top: 0.3rem;
+}
+.classicSupportingInfo .switchBtn:hover {
+  color: #b2001d;
+}
+.classicSupportingInfo .shiftComponent {
+  height: 4.9rem;
+  transition: height 0.35s ease-in-out;
+}
+.classicSupportingInfo .shiftComponent.closed {
+  height: 0;
+}
+.classicSupportingInfo .shiftComponent ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.classicSupportingInfo .shiftComponent ul li {
+  display: inline;
+}
+.classicSupportingInfo .shiftComponent ul li .shiftBtn {
+  height: 2rem;
+  background-color: #f2f2f2;
+  border: 0.125rem solid #f2f2f2;
+  margin: 0.12rem 0.12rem 0.12rem;
+}
+.classicSupportingInfo .shiftComponent ul li .shiftBtn.active {
+  width: 5rem;
+  background-color: #fff;
+  border-color: #b2001d;
+  font-size: 1.1rem;
+}
+.classicSupportingInfo .shiftComponent ul li .shiftBtn:hover {
+  border-color: #b2001d;
+}
+.classicSupportingInfo .shiftComponent ul li .shiftBtn.none {
+  display: none;
 }
 
 /*# sourceMappingURL=styles/styles.css.map */
