--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -1,3 +1,10 @@
+//variables
+$red: #b2001d
+$white: #fff
+$dark-grey: #333
+$medium-grey: #898989
+$light-grey: #eeeeee
+
 .gridSection
   flex-basis: 75rem
   height: 100%
@@ -17,8 +24,7 @@
   flex-direction: row
   justify-content: flex-start
   align-items: center
-  // margin-left: 0.5rem
-  border-left: 0.0625rem solid #ddd
+  border-left: 0.0625rem solid $light-grey
 
 .gridRow
   flex: 5
@@ -27,14 +33,13 @@
   flex-direction: row
   justify-content: flex-start
   align-items: flex-start
-  // margin-left: 0.5rem
-  border-bottom: 0.0625rem solid #ddd
-  border-left: 0.0625rem solid #ddd
+  border-bottom: 0.0625rem solid $light-grey
+  border-left: 0.0625rem solid $light-grey
 
 .gridHeaderCell
   flex: 1
   text-align: left
-  border-right: 0.0625rem solid #ddd
+  border-right: 0.0625rem solid $light-grey
   height: 100%
 
 .gridCell
@@ -44,23 +49,39 @@
   flex-direction: column
   justify-content: flex-start
   align-items: flex-start
-  border-right: 0.0625rem solid #ddd
+  border-right: 0.0625rem solid $light-grey
 
 .gridNum
   padding: 0.125rem
 
 .gridEvent
   background-color: teal
-  color: #ffffff
+  color: $white
   text-align: left
   width:90%
   padding: 0.125rem
   border-radius: 0.2rem
   margin-top: 0.2rem
 
+
+
+//---------------------------------------------- now for the classic view grid
 .classicGridSection
   flex-basis: 75rem
   height: 100%
+  display: inline-block
+  border-bottom: 0.0625rem solid $light-grey
+  border-left: 0.0625rem solid $light-grey
+  // border-top-width: 0
+  // border-right-width: 0
+
+.classicGrid
+  width: 100%
+  height: 100%
+  display: flex
+  flex-direction: row
+  justify-content: flex-start
+  align-items: center
 
 .classicGridDateCol
   width: 6rem
@@ -69,6 +90,13 @@
   flex-direction: column
   justify-content: flex-start
   align-items: center
+  border-right: 0.0625rem solid $light-grey
+  // border: 0.0625rem solid $light-grey
+  // border-top-width: 0
+  // border-bottom-width: 0
+  // border-right-color: $light-grey
+  // border-right-style: solid
+  // border-right-width: 0.0625rem
 
 
 .classicGridPersonCol
@@ -78,26 +106,28 @@
   flex-direction: column
   justify-content: flex-start
   align-items: center
-  margin-left: 0.2rem
+  border-right: 0.0625rem solid $light-grey
+  // border: 0.0625rem solid $light-grey
+  // margin-left: 0.2rem
 
+.classicGridPersonName
+  border-bottom: 0.0625rem solid $light-grey
+
+.classicGridMonthName
+  border-bottom: 0.0625rem solid $light-grey
 
 .classicGridCell, .classicGridPersonName, .classicGridDate, .classicGridMonthName
   flex: 1
   width: 100%
-  border: 0.0625rem solid #ffffff
-  &:hover
-    border-color: #b2001d
+  text-align: center
 
 .classicGridCell:nth-child(odd)
-    background-color: #eee
+  background-color: $light-grey
   
 .classicGridDate:nth-child(odd)
-    background-color: #eee
+  background-color: $light-grey
 
-.classicGrid
-  width: 100%
-  height: 100%
-  display: flex
-  flex-direction: row
-  justify-content: flex-start
-  align-items: center
+.classicGridCell
+  &:hover
+    background-color: $medium-grey
+    color: $white
