updated the header component to be consistent with mockup classnames and styling. next is rightmenu on classic view

--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -79,6 +79,7 @@ header
     margin-left: 0.625rem
     flex: 1
     text-align: center
+    // display: inline
   li a 
     display: block
     text-decoration: none
