--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -61,6 +61,7 @@ aside
     .shiftComponent
       height: 4.9rem
       transition: height .35s ease-in-out
+      overflow: hidden
       &.closed
         height: 0
       ul
