added basic components for right menus. next is the classic grid component

--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -59,7 +59,7 @@ aside
         color: #b2001d
 
     .shiftComponent
-      height: 4.9rem
+      height: 8rem
       transition: height .35s ease-in-out
       overflow: hidden
       &.closed
@@ -110,8 +110,9 @@ aside
       color: #b2001d
 
   .shiftComponent
-    height: 4.9rem
+    height: 7.5rem
     transition: height .35s ease-in-out
+    overflow: hidden
     &.closed
       height: 0
     ul
@@ -136,6 +137,19 @@ aside
           &.none 
             display: none
 
+  .conflictsComponent
+    height: 7.5rem
+    transition: height .35s ease-in-out
+    overflow: hidden
+    &.closed
+      height: 0
+
+  .statsComponent
+    height: 7.5rem
+    transition: height .35s ease-in-out
+    overflow: hidden
+    &.closed
+      height: 0
 // /*   conflicts stuffs   
 // .conflicts {
 //   margin: 0;
