--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -110,16 +110,19 @@ $light-grey: #eeeeee
   // border: 0.0625rem solid $light-grey
   // margin-left: 0.2rem
 
-.classicGridPersonName
-  border-bottom: 0.0625rem solid $light-grey
-
-.classicGridMonthName
-  border-bottom: 0.0625rem solid $light-grey
-
 .classicGridCell, .classicGridPersonName, .classicGridDate, .classicGridMonthName
   flex: 1
   width: 100%
   text-align: center
+
+.classicGridPersonName
+  border-bottom: 0.0625rem solid $light-grey
+  flex: 2
+  overflow: hidden
+
+.classicGridMonthName
+  border-bottom: 0.0625rem solid $light-grey
+  flex: 2
 
 .classicGridCell:nth-child(odd)
   background-color: $light-grey
