--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -106,6 +106,10 @@ aside
       right: 0.8rem
       float: right
       margin-top: 0.3rem
+      transition: all .35s ease-in-out
+      transform: rotate(180deg)
+      &.rotated
+        transform: rotate(0deg)
     &:hover 
       color: #b2001d
 
