--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -287,9 +287,16 @@ header .viewSelectBtn.active {
   background-color: #eeeeee;
 }
 
+.classicGridCell.weekend {
+  background-color: #eaf7ff;
+}
 .classicGridCell:hover {
   background-color: #898989;
   color: #fff;
+}
+
+.classicGridDate.weekend {
+  background-color: #eaf7ff;
 }
 
 aside {
