--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -113,6 +113,7 @@ $weekend-blue: #eaf7ff
 
 .classicGridCell, .classicGridPersonName, .classicGridDate, .classicGridMonthName
   flex: 1
+  // flex-basis: 56rem
   width: 100%
   text-align: center
 
@@ -125,11 +126,11 @@ $weekend-blue: #eaf7ff
   border-bottom: 0.0625rem solid $light-grey
   flex: 2
 
-.classicGridCell:nth-child(odd)
-  background-color: $light-grey
+// .classicGridCell:nth-child(odd)
+//   background-color: $light-grey
   
-.classicGridDate:nth-child(odd)
-  background-color: $light-grey
+// .classicGridDate:nth-child(odd)
+//   background-color: $light-grey
 
 .classicGridCell
   &.weekend
