--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -147,3 +147,36 @@ $weekend-blue: #eaf7ff
   border-bottom: 0.0625rem solid $light-grey
   &.weekend
     background-color: $weekend-blue
+
+
+
+
+//modal
+.modal
+  display: block
+  position: fixed
+  z-index: 1
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  overflow: auto
+  background-color: #000000
+  background-color: rgba(0,0,0,0.1)
+  &.hidden
+    display: none
+//modal-content
+.modal-content
+  display: block
+  position: absolute
+  z-index: 2
+  left: 0
+  top: 0
+  color: red
+  width: 10rem
+  height: 7.5rem
+  background-color: #0101ff
+  border-radius: 5px
+  box-shadow: 0 0 0.3rem rgba(0,0,0,0.5)
+  &.hidden
+    display: none
