--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -168,10 +168,10 @@ $weekend-blue: #eaf7ff
 //modal-content
 .modal-content
   display: block
-  position: absolute
+  position: relative
   z-index: 2
-  left: 0
-  top: 0
+  left: 20px
+  top: 20px
   color: red
   width: 10rem
   height: 7.5rem
