--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -137,6 +137,7 @@ $weekend-blue: #eaf7ff
 
 .classicGridCell
   border-bottom: 0.0625rem solid $light-grey
+  position: relative
   &.weekend
     background-color: $weekend-blue
   &:hover
@@ -165,18 +166,19 @@ $weekend-blue: #eaf7ff
   background-color: rgba(0,0,0,0.1)
   &.hidden
     display: none
-//modal-content
+
 .modal-content
-  display: block
-  position: relative
-  z-index: 2
-  left: 20px
-  top: 20px
-  color: red
+  display: inline-block
+  position: absolute
+  z-index: 3
+  left: 3.75rem
+  bottom: 1.25rem
+  color: #000000
   width: 10rem
   height: 7.5rem
-  background-color: #0101ff
-  border-radius: 5px
-  box-shadow: 0 0 0.3rem rgba(0,0,0,0.5)
+  padding: 0.5rem
+  background-color: $white
+  border-radius: 0.1875rem
+  box-shadow: 0 0 0.3rem rgba(0,0,0,0.3)
   &.hidden
     display: none
