--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -193,3 +193,10 @@ $weekend-blue: #eaf7ff
 .modalContentShiftName
   display: inline
   margin-right: 0.2rem
+
+.addBtn
+  width: 100%
+  .left
+    display: inline
+  .right
+    display: inline
