--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -41,6 +41,9 @@ header
   color: $white
   height: 100%
   display: flex
+  flex-direction: row
+  justify-content: space-between
+  align-items: center
   background-color: $dark-grey
 
 .headerFlexContainer
@@ -108,19 +111,44 @@ header
   
   
 // export button stuff
-.headerExportBtns
+.dropdown
   flex: 1
   height: 100%
-  display: flex
   padding-right: 1.25rem
-  justify-content: flex-end
-  align-items: center
+  position: relative
 
-.headerExportBtn
+.dropbtn
   display: inline
-  margin-left: 0.625rem
+  float: right
   color: $white
   background-color: $dark-grey
   border: none
+  margin-top: 1.4rem
   &:hover 
     color: $red
+    .dropdownContent
+      display: block
+
+.dropdownContent
+  display: none
+  position: absolute
+  float: right
+  right: 1.25rem
+  top: 3.025rem
+  background-color: #f1f1f1
+  min-width: 10rem
+  box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0,0.2)
+  z-index: 1
+  a
+    color: black
+    padding: 0.75rem 1rem
+    text-decoration: none
+    display: block
+    &:hover
+      background-color: #ddd
+
+// .dropdown
+//   &:hover
+//     .dropdown-content
+//       display: block
+
