--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -65,6 +65,9 @@ header .viewSelectBtn.active {
   color: #fff;
   height: 100%;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background-color: #333;
 }
 
@@ -139,24 +142,47 @@ header .viewSelectBtn.active {
   border-color: #898989;
 }
 
-.headerExportBtns {
+.dropdown {
   flex: 1;
   height: 100%;
-  display: flex;
   padding-right: 1.25rem;
-  justify-content: flex-end;
-  align-items: center;
+  position: relative;
 }
 
-.headerExportBtn {
+.dropbtn {
   display: inline;
-  margin-left: 0.625rem;
+  float: right;
   color: #fff;
   background-color: #333;
   border: none;
+  margin-top: 1.4rem;
 }
-.headerExportBtn:hover {
+.dropbtn:hover {
   color: #b2001d;
+}
+.dropbtn:hover .dropdownContent {
+  display: block;
+}
+
+.dropdownContent {
+  display: none;
+  position: absolute;
+  float: right;
+  right: 1.25rem;
+  top: 3.025rem;
+  background-color: #f1f1f1;
+  min-width: 10rem;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdownContent a {
+  color: black;
+  padding: 0.75rem 1rem;
+  text-decoration: none;
+  display: block;
+}
+.dropdownContent a:hover {
+  background-color: #ddd;
 }
 
 .gridSection {
