--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -388,13 +388,11 @@ header .viewSelectBtn.active {
   display: block;
   position: absolute;
   top: 200px;
-  left: 400px;
+  left: 40%;
   width: 250px;
-  height: 800px;
   padding: 50px;
   z-index: 8;
   background-color: #fff;
-  border-radius: 2%;
   box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
 }
 .shiftSettings.hidden {
@@ -436,6 +434,56 @@ header .viewSelectBtn.active {
 }
 .editShiftInputArea button {
   flex: 1;
+}
+
+.peopleSettings {
+  position: absolute;
+  top: 200px;
+  left: 25%;
+  width: 650px;
+  padding: 50px;
+  z-index: 8;
+  background-color: #fff;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.peopleSettings.hidden {
+  display: none;
+}
+
+.peopleLeft {
+  height: 100%;
+  background-color: #eeeeee;
+  flex: 1;
+}
+.peopleLeft .active {
+  background-color: teal;
+}
+
+.peopleRight {
+  flex: 3;
+  height: 100%;
+  background-color: teal;
+}
+.peopleRight h1 {
+  display: inline;
+  margin-left: 30%;
+}
+
+.addNewPersonBtn {
+  display: inline;
+  float: right;
+}
+
+.addPeopleCloseBtn {
+  margin-top: 30px;
+}
+
+.personTab:hover {
+  background-color: #898989;
 }
 
 aside {
